<resources>
    <string name="app_name">Bazaar</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="emailMe">Email me</string>
    <string name="password">Password</string>
    <string name="forgotPasswordQ">Forget password?</string>
    <string name="clickHere">Click here</string>
    <string name="newTo">New to Bazaar?</string>
    <string name="signUp">Sign up</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="forgotPwdText">We will send you an email with instructions on how to reset your password.</string>
    <string name="already">Already have an account?</string>
    <string name="fullName">Full name</string>
    <string name="phoneNr">Phone number</string>
    <string name="splashText">Small Fare - Big Life</string>
    <string name="poweredBy">POWERED BY</string>
    <string name="timeline">TIMELINE</string>
    <string name="mymarket">MY MARKET</string>
    <string name="myfares">MY FARES</string>
    <string name="price">Price</string>
    <string name="available_amount">Available amount </string>
    <string name="revenue">Revenue</string>
    <string name="total_items">Total items</string>
    <string name="price_item">Price/item</string>
    <string name="sold_items">Sold items</string>
    <string name="upload_image">Upload image</string>
    <string name="give_us_details_about_your_fare">Give us details about your fare</string>
    <string name="launch_my_fare">Launch my fare</string>
    <string name="title">Title</string>
    <string name="contact_details">Contact details</string>
    <string name="tel">Tel</string>
    <string name="short_description">Short description</string>
    <string name="date">Date:</string>
    <string name="rating">Rating</string>
    <string name="searchByName">Search by product name</string>
    <string name="publish">Publish</string>
    <string name="settings">Settings</string>
    <string name="product_detail">Product detail</string>
    <string name="send_a_chat_message">Send a chat message</string>
    <string name="profile">Profile</string>
    <string name="ongoing_sales">Ongoing Sales</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="amount">Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_type">Amount type</string>
    <string name="my_order">My order</string>
    <string name="send_my_order">Send my order</string>
    <string name="owner">Owner</string>
    <string name="customer">Customer</string>
    <string name="status">status</string>
    <string name="order_detail">Order detail</string>
</resources>