<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ForgetPasswordFragment"
    android:background="@color/littleBgLogIn"
    android:padding="@dimen/logInPadding">

    <TextView
        android:id="@+id/textViewForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewForgetPwdText"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/white"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewForgetPwdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPwd"
        app:layout_constraintBottom_toTopOf="@id/editTextUsernameForgetPwd"
        android:text="@string/forgotPwdText"
        android:textColor="@color/lighterGray"
        android:textSize="@dimen/littleTextSize"
        android:layout_marginTop="@dimen/marginCustomEditText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUsernameForgetPwd"
        style="@style/customEditTextOutside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgetPwdText"
        app:layout_constraintBottom_toTopOf="@id/editTextEmailForgetPwd"
        android:layout_marginTop="@dimen/marginCustomEditText"
        android:hint="@string/username">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameForgetPwd"
        style="@style/customEditTextInside"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailForgetPwd"
        style="@style/customEditTextOutside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsernameForgetPwd"
        app:layout_constraintBottom_toTopOf="@id/buttonForgotPwd"
        android:layout_marginTop="@dimen/marginCustomEditText"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailForgetPwd"
            style="@style/customEditTextInside"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonForgotPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailForgetPwd"
        android:text="@string/emailMe"
        android:textSize="@dimen/textSize"
        android:background="@drawable/blue_button_bg"
        android:layout_marginTop="@dimen/marginCustomEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>