<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyFaresFragment">

    <include
        android:id="@+id/topBarMyFares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/fragment_base"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchViewMyFares"/>

    <SearchView
        android:id="@+id/searchViewMyFares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/searchByName"
        app:layout_constraintTop_toBottomOf="@id/topBarMyFares"
        android:layoutDirection="rtl"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/ongoingSalesButtonMyFares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mainBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ongoingOrdersButtonMyFares"
        app:layout_constraintTop_toBottomOf="@id/searchViewMyFares"
        android:paddingStart="@dimen/buttonMargins"
        android:paddingEnd="@dimen/buttonMargins"
        android:text="@string/ongoing_sales"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/ongoingOrdersButtonMyFares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mainBlue"
        android:text="@string/ongoing_orders"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ongoingSalesButtonMyFares"
        app:layout_constraintTop_toBottomOf="@id/searchViewMyFares"
        android:paddingStart="@dimen/buttonMargins"
        android:paddingEnd="@dimen/buttonMargins"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myFaresRecycleView"
        android:padding="@dimen/cardMargin"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ongoingOrdersButtonMyFares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/single_item_fare"/>

</androidx.constraintlayout.widget.ConstraintLayout>