<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddProductFragment">

    <ImageView
        android:id="@+id/newImageAddP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_new_product_image"/>

    <ImageView
        android:id="@+id/uploadImgAddP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/newImageAddP"/>

    <TextView
        android:id="@+id/uploadImgTextAddP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadImgAddP"
        app:layout_constraintBottom_toBottomOf="@id/newImageAddP"
        android:text="@string/upload_image"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sliderAddP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newImageAddP"
        android:layout_margin="@dimen/marginBetweenElements"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderAddP"
        android:layout_margin="@dimen/marginBetweenElements"
        android:text="@string/give_us_details_about_your_fare"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_my_fare"
        android:layout_margin="@dimen/marginBetweenElements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>